--- a/trunk/DMSTrabant/Nabidky/vcNabidky.xib
+++ b/trunk/DMSTrabant/Nabidky/vcNabidky.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -18,10 +19,10 @@
             <rect key="frame" x="0.0" y="64" width="1024" height="655"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" image="alu_grid_texture_view.png" translatesAutoresizingMaskIntoConstraints="NO" id="11">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="alu_grid_texture_view.png" translatesAutoresizingMaskIntoConstraints="NO" id="11">
                     <rect key="frame" x="0.0" y="0.0" width="1024" height="655"/>
                 </imageView>
-                <view tag="111" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="16">
+                <view tag="111" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="16">
                     <rect key="frame" x="15" y="27" width="994" height="620"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="pozadie_ciste.png" translatesAutoresizingMaskIntoConstraints="NO" id="38">
