--- a/trunk/DMSTrabant/Base/vNumKeyboard.xib
+++ b/trunk/DMSTrabant/Base/vNumKeyboard.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -155,9 +156,10 @@
                 </button>
                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="100" userLabel="btn_C">
                     <rect key="frame" x="0.0" y="240" width="80" height="80"/>
+                    <color key="backgroundColor" red="0.78431379795074463" green="0.78431379795074463" blue="0.7882353663444519" alpha="1" colorSpace="deviceRGB"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                    <state key="normal" title="C" backgroundImage="kalk_clear_bg.png">
-                        <color key="titleColor" red="0.26274511218070984" green="0.40000003576278687" blue="0.57647061347961426" alpha="1" colorSpace="deviceRGB"/>
+                    <state key="normal" title="C">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -244,7 +246,6 @@
     </objects>
     <resources>
         <image name="kalk_cisla_bg.png" width="1" height="60"/>
-        <image name="kalk_clear_bg.png" width="1" height="60"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
