--- a/trunk/DMSTrabant/NavigControls/vcPoznamka.xib
+++ b/trunk/DMSTrabant/NavigControls/vcPoznamka.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -23,6 +22,8 @@
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="poznamkaOkno.png" translatesAutoresizingMaskIntoConstraints="NO" id="21">
                     <rect key="frame" x="0.0" y="0.0" width="994" height="620"/>
+                    <color key="backgroundColor" red="0.92156869173049927" green="0.92156869173049927" blue="0.92549026012420654" alpha="1" colorSpace="deviceRGB"/>
+                    <color key="tintColor" red="0.60928946167883213" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" tag="112" contentMode="scaleToFill" image="spona_bottom.png" translatesAutoresizingMaskIntoConstraints="NO" id="129">
                     <rect key="frame" x="322" y="0.0" width="350" height="54"/>
