--- a/trunk/DMSTrabant/VybSluz/vcPaketInfo.xib
+++ b/trunk/DMSTrabant/VybSluz/vcPaketInfo.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="vcPaketInfo">
@@ -19,28 +19,28 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="2">
-            <rect key="frame" x="0.0" y="0.0" width="666" height="349"/>
+            <rect key="frame" x="0.0" y="0.0" width="626" height="322"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="top" translatesAutoresizingMaskIntoConstraints="NO" id="21" userLabel="PraceView">
-                    <rect key="frame" x="5" y="5" width="219" height="61"/>
+                    <rect key="frame" x="5" y="5" width="205" height="54"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="okrajSrollView.png" translatesAutoresizingMaskIntoConstraints="NO" id="68">
-                            <rect key="frame" x="0.0" y="0.0" width="219" height="61"/>
+                            <rect key="frame" x="0.0" y="0.0" width="205" height="54"/>
                         </imageView>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Práce:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="326">
-                            <rect key="frame" x="20" y="10" width="181" height="21"/>
+                            <rect key="frame" x="5" y="5" width="182" height="21"/>
                             <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Cena práce" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="337">
-                            <rect key="frame" x="43" y="35" width="158" height="21"/>
+                            <rect key="frame" x="5" y="28" width="195" height="21"/>
                             <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
                             <color key="textColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="342" userLabel="btnPrace">
-                            <rect key="frame" x="0.0" y="0.0" width="219" height="91"/>
+                            <rect key="frame" x="0.0" y="0.0" width="205" height="91"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="91" id="620"/>
                             </constraints>
@@ -61,38 +61,39 @@
                     <constraints>
                         <constraint firstItem="68" firstAttribute="top" secondItem="21" secondAttribute="top" id="119"/>
                         <constraint firstItem="68" firstAttribute="leading" secondItem="21" secondAttribute="leading" id="123"/>
-                        <constraint firstItem="326" firstAttribute="leading" secondItem="21" secondAttribute="leading" constant="20" symbolic="YES" id="327"/>
+                        <constraint firstItem="326" firstAttribute="leading" secondItem="21" secondAttribute="leading" constant="5" id="327"/>
                         <constraint firstItem="342" firstAttribute="leading" secondItem="21" secondAttribute="leading" id="343"/>
                         <constraint firstItem="342" firstAttribute="top" secondItem="21" secondAttribute="top" id="344"/>
                         <constraint firstAttribute="trailing" secondItem="68" secondAttribute="trailing" id="541"/>
                         <constraint firstItem="342" firstAttribute="trailing" secondItem="21" secondAttribute="trailing" id="542"/>
-                        <constraint firstItem="337" firstAttribute="trailing" secondItem="326" secondAttribute="trailing" id="566"/>
                         <constraint firstAttribute="trailing" secondItem="326" secondAttribute="trailing" constant="18" id="568"/>
-                        <constraint firstItem="337" firstAttribute="leading" secondItem="21" secondAttribute="leading" constant="43" id="569"/>
+                        <constraint firstItem="337" firstAttribute="leading" secondItem="21" secondAttribute="leading" constant="5" id="569"/>
                         <constraint firstItem="68" firstAttribute="bottom" secondItem="21" secondAttribute="bottom" id="618"/>
-                        <constraint firstItem="326" firstAttribute="top" secondItem="21" secondAttribute="top" constant="10" id="627"/>
+                        <constraint firstItem="326" firstAttribute="top" secondItem="21" secondAttribute="top" constant="5" id="627"/>
                         <constraint firstAttribute="bottom" secondItem="337" secondAttribute="bottom" constant="5" id="631"/>
+                        <constraint firstAttribute="height" constant="54" id="0kt-1h-XXw"/>
+                        <constraint firstAttribute="trailing" secondItem="337" secondAttribute="trailing" constant="5" id="GMr-V0-aAQ"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="134" userLabel="MaterialView">
-                    <rect key="frame" x="224" y="5" width="218" height="61"/>
+                    <rect key="frame" x="210" y="5" width="206" height="54"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="okrajSrollView.png" translatesAutoresizingMaskIntoConstraints="NO" id="193">
-                            <rect key="frame" x="0.0" y="0.0" width="218" height="61"/>
+                            <rect key="frame" x="0.0" y="0.0" width="206" height="54"/>
                         </imageView>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Materiál:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="449">
-                            <rect key="frame" x="20" y="10" width="174" height="21"/>
+                            <rect key="frame" x="5" y="5" width="177" height="21"/>
                             <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Cena materiálu" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="451">
-                            <rect key="frame" x="41" y="35" width="153" height="21"/>
+                            <rect key="frame" x="5" y="28" width="196" height="21"/>
                             <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
                             <color key="textColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="450" userLabel="btnMaterial">
-                            <rect key="frame" x="0.0" y="0.0" width="218" height="91"/>
+                            <rect key="frame" x="0.0" y="0.0" width="206" height="91"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="91" id="634"/>
                             </constraints>
@@ -115,39 +116,37 @@
                         <constraint firstItem="193" firstAttribute="top" secondItem="134" secondAttribute="top" id="200"/>
                         <constraint firstItem="450" firstAttribute="leading" secondItem="134" secondAttribute="leading" id="462"/>
                         <constraint firstItem="450" firstAttribute="top" secondItem="134" secondAttribute="top" id="466"/>
-                        <constraint firstItem="449" firstAttribute="leading" secondItem="134" secondAttribute="leading" constant="20" symbolic="YES" id="468"/>
-                        <constraint firstItem="451" firstAttribute="trailing" secondItem="449" secondAttribute="trailing" id="471"/>
+                        <constraint firstItem="449" firstAttribute="leading" secondItem="134" secondAttribute="leading" constant="5" id="468"/>
                         <constraint firstAttribute="trailing" secondItem="193" secondAttribute="trailing" id="536"/>
                         <constraint firstItem="450" firstAttribute="trailing" secondItem="134" secondAttribute="trailing" id="538"/>
                         <constraint firstAttribute="trailing" secondItem="449" secondAttribute="trailing" constant="24" id="539"/>
-                        <constraint firstItem="451" firstAttribute="leading" secondItem="134" secondAttribute="leading" constant="41" id="540"/>
+                        <constraint firstItem="451" firstAttribute="leading" secondItem="134" secondAttribute="leading" constant="5" id="540"/>
                         <constraint firstItem="193" firstAttribute="bottom" secondItem="134" secondAttribute="bottom" id="633"/>
-                        <constraint firstItem="449" firstAttribute="top" secondItem="134" secondAttribute="top" constant="10" id="635"/>
+                        <constraint firstItem="449" firstAttribute="top" secondItem="134" secondAttribute="top" constant="5" id="635"/>
                         <constraint firstAttribute="bottom" secondItem="451" secondAttribute="bottom" constant="5" id="638"/>
+                        <constraint firstAttribute="height" constant="54" id="oq0-yh-mRK"/>
+                        <constraint firstAttribute="trailing" secondItem="451" secondAttribute="trailing" constant="5" id="v0J-OV-xit"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="166" userLabel="CelkemView">
-                    <rect key="frame" x="442" y="5" width="219" height="61"/>
+                    <rect key="frame" x="416" y="5" width="205" height="54"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="okrajSrollView.png" translatesAutoresizingMaskIntoConstraints="NO" id="202">
-                            <rect key="frame" x="0.0" y="0.0" width="219" height="61"/>
+                            <rect key="frame" x="0.0" y="0.0" width="205" height="54"/>
                         </imageView>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Celkom:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="473">
-                            <rect key="frame" x="20" y="10" width="181" height="21"/>
+                            <rect key="frame" x="5" y="5" width="182" height="21"/>
                             <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Cena celkem" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="475">
-                            <rect key="frame" x="41" y="35" width="160" height="21"/>
+                            <rect key="frame" x="5" y="28" width="195" height="21"/>
                             <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
                             <color key="textColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="474" userLabel="btnCelkem">
-                            <rect key="frame" x="0.0" y="0.0" width="221" height="91"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="91" id="639"/>
-                            </constraints>
+                            <rect key="frame" x="0.0" y="0.0" width="205" height="54"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                             <state key="normal">
                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -165,25 +164,24 @@
                     <constraints>
                         <constraint firstItem="202" firstAttribute="leading" secondItem="166" secondAttribute="leading" id="208"/>
                         <constraint firstItem="202" firstAttribute="top" secondItem="166" secondAttribute="top" id="210"/>
-                        <constraint firstItem="474" firstAttribute="leading" secondItem="166" secondAttribute="leading" id="487"/>
-                        <constraint firstItem="474" firstAttribute="top" secondItem="166" secondAttribute="top" id="488"/>
-                        <constraint firstItem="473" firstAttribute="centerX" secondItem="474" secondAttribute="centerX" id="490"/>
-                        <constraint firstItem="473" firstAttribute="leading" secondItem="166" secondAttribute="leading" constant="20" symbolic="YES" id="492"/>
-                        <constraint firstItem="475" firstAttribute="trailing" secondItem="473" secondAttribute="trailing" id="495"/>
+                        <constraint firstItem="473" firstAttribute="leading" secondItem="166" secondAttribute="leading" constant="5" id="492"/>
                         <constraint firstAttribute="trailing" secondItem="202" secondAttribute="trailing" id="529"/>
                         <constraint firstAttribute="trailing" secondItem="473" secondAttribute="trailing" constant="18" id="531"/>
-                        <constraint firstItem="475" firstAttribute="leading" secondItem="166" secondAttribute="leading" constant="41" id="532"/>
+                        <constraint firstItem="475" firstAttribute="leading" secondItem="166" secondAttribute="leading" constant="5" id="532"/>
                         <constraint firstItem="202" firstAttribute="bottom" secondItem="166" secondAttribute="bottom" id="640"/>
-                        <constraint firstItem="473" firstAttribute="top" secondItem="166" secondAttribute="top" constant="10" id="642"/>
+                        <constraint firstItem="473" firstAttribute="top" secondItem="166" secondAttribute="top" constant="5" id="642"/>
                         <constraint firstAttribute="bottom" secondItem="475" secondAttribute="bottom" constant="5" id="643"/>
+                        <constraint firstItem="474" firstAttribute="bottom" secondItem="202" secondAttribute="bottom" id="6op-5k-3V8"/>
+                        <constraint firstAttribute="height" constant="54" id="Nxk-ma-NY5"/>
+                        <constraint firstItem="474" firstAttribute="leading" secondItem="202" secondAttribute="leading" id="Usd-Ui-ayZ"/>
+                        <constraint firstItem="474" firstAttribute="trailing" secondItem="202" secondAttribute="trailing" id="taI-9f-MFf"/>
+                        <constraint firstAttribute="trailing" secondItem="475" secondAttribute="trailing" constant="5" id="v3b-wS-VDF"/>
+                        <constraint firstItem="474" firstAttribute="top" secondItem="202" secondAttribute="top" id="zOf-qc-vM9"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4">
-                    <rect key="frame" x="0.0" y="74" width="666" height="275"/>
+                    <rect key="frame" x="0.0" y="67" width="626" height="255"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="275" id="647"/>
-                    </constraints>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="13"/>
                         <outlet property="delegate" destination="-1" id="14"/>
@@ -212,7 +210,7 @@
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="123" y="149.5"/>
+            <point key="canvasLocation" x="132" y="156"/>
         </view>
     </objects>
     <resources>
